--- a/src/piano.html
+++ b/src/piano.html
@@ -2,7 +2,8 @@
     <head>
         <title>Babylon.js build piano sample code</title>
         <script src="babylon.js"></script>
-        <script src="scene.js"></script>
+        <script src="scene.js"></script>''
+        <script src="soundfont-player.min.js"></script>
         <style>
             body,#renderCanvas { width: 100%; height: 100%;}
         </style>
